recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: value :: is not a member of Int
    count::count + 1;
         ^